--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
     implementation 'com.takisoft.datetimepicker:datetimepicker:1.0.0'
+    implementation 'com.naver.maps:map-sdk:3.7.0'
 }
