--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
 
     <application
         android:name="com.hoony.kotlinsample.memo.application.DemoMemoApplication"
@@ -37,6 +39,7 @@
         </activity>
         <activity android:name="com.hoony.kotlinsample.memo.main.MainActivity" />
         <activity android:name=".room.RoomActivity" />
+        <activity android:name=".content_provider.list.ListActivity" />
 
         <receiver android:name="com.hoony.kotlinsample.memo.broadcast_receiver.AlarmTool" />
     </application>
