--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name="com.hoony.kotlinsample.memo.application.DemoMemoApplication"
@@ -41,6 +42,7 @@
         <activity android:name=".room.RoomActivity" />
         <activity android:name=".content_provider.list.ListActivity" />
         <activity android:name=".content_provider.contact.ContactActivity" />
+        <activity android:name=".content_provider.audio.AudioActivity" />
 
         <receiver android:name="com.hoony.kotlinsample.memo.broadcast_receiver.AlarmTool" />
     </application>
