--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,12 @@ buildscript {
         life_cycle_version = '2.2.0'
         glide_version = '4.11.0'
         coroutine_version = '1.3.0'
+        exo_player_version = '2.10.0'
     }
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.3'
