--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
         <activity android:name=".content_provider.audio.AudioActivity" />
         <activity android:name=".content_provider.video.list.VideoActivity" />
         <activity android:name=".custom_view.CustomViewActivity" />
+        <activity android:name=".saved_state_view_model.SavedStateViewModelActivity" />
 
         <receiver android:name="com.hoony.kotlinsample.memo.broadcast_receiver.AlarmTool" />
     </application>
