Dagger example first commit.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,7 @@ dependencies {
 
     implementation "com.google.android.exoplayer:exoplayer-core:$exo_player_version"
     implementation "com.google.android.exoplayer:exoplayer-ui:$exo_player_version"
+
+    implementation "com.google.dagger:dagger:$dagger2_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger2_version"
 }
