--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
         <activity android:name=".content_provider.video.list.VideoActivity" />
         <activity android:name=".custom_view.CustomViewActivity" />
         <activity android:name=".saved_state_view_model.SavedStateViewModelActivity" />
+        <activity android:name=".dagger.DaggerActivity" />
 
         <receiver android:name="com.hoony.kotlinsample.memo.broadcast_receiver.AlarmTool" />
     </application>
