--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         glide_version = '4.11.0'
         coroutine_version = '1.3.0'
         exo_player_version = '2.10.0'
+        dagger2_version = '2.18'
     }
     repositories {
         google()
