--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,8 @@
         <activity android:name=".content_provider.video.list.VideoActivity" />
         <activity android:name=".custom_view.CustomViewActivity" />
         <activity android:name=".saved_state_view_model.SavedStateViewModelActivity" />
-        <activity android:name=".dagger.DaggerActivity" />
+        <activity android:name=".dagger.example1.DaggerActivity" />
+        <activity android:name=".dagger.list.DaggerExampleListActivity" />
 
         <receiver android:name="com.hoony.kotlinsample.memo.broadcast_receiver.AlarmTool" />
     </application>
