--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         coroutine_version = '1.3.0'
         exo_player_version = '2.10.0'
         dagger2_version = '2.18'
+        rx_java_version = '1.1.0'
     }
     repositories {
         google()
