--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,10 +46,11 @@
         <activity android:name=".content_provider.video.list.VideoActivity" />
         <activity android:name=".custom_view.CustomViewActivity" />
         <activity android:name=".saved_state_view_model.SavedStateViewModelActivity" />
-        <activity android:name=".dagger.example1.DaggerActivity" />
+        <activity android:name=".dagger.example1.DaggerExample1Activity" />
         <activity android:name=".dagger.list.DaggerExampleListActivity" />
         <activity android:name=".rx_java.list.RxJavaExampleListActivity" />
         <activity android:name=".rx_java.example1.RxJavaExample1Activity" />
+        <activity android:name=".dagger.example2.DaggerExample2Activity" />
 
         <receiver android:name="com.hoony.kotlinsample.memo.broadcast_receiver.AlarmTool" />
     </application>
