--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,7 +56,9 @@
         <activity android:name=".ui_example.view_pager_in_recycler_view.UIExample2Activity" />
         <activity android:name=".sticky_item_decoration.StickyItemDecorationActivity" />
         <activity android:name=".behavior.list.ListActivity" />
-        <activity android:name=".behavior.scroll_example.BehaviorExampleActivity3" />
+        <activity android:name=".behavior.scroll_example_1.BehaviorExampleActivity3" />
+        <activity android:name=".behavior.scroll_example_2.BehaviorExampleActivity4" />
+        <activity android:name=".behavior.scroll_example_3.BehaviorExampleActivity5" />
 
         <receiver android:name="com.hoony.kotlinsample.memo.broadcast_receiver.AlarmTool" />
     </application>
