--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,17 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:name="com.hoony.kotlinsample.memo.application.DemoMemoApplication"
+        android:name=".memo.application.DemoMemoApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".ui_example.collapsing_toolbar_layout.UIExampleActivity3"
+            android:label="@string/title_activity_u_i_example3"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,13 +28,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.hoony.kotlinsample.memo.intro.IntroActivity" />
+        <activity android:name=".memo.intro.IntroActivity" />
         <activity
-            android:name="com.hoony.kotlinsample.memo.detail.DetailActivity"
+            android:name=".memo.detail.DetailActivity"
             android:label="@string/title_activity_detail"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.hoony.kotlinsample.memo.list.ListActivity"
+            android:name=".memo.list.ListActivity"
             android:label="@string/title_activity_list"
             android:parentActivityName="androidx.appcompat.app.AppCompatActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -38,7 +42,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="androidx.appcompat.app.AppCompatActivity" />
         </activity>
-        <activity android:name="com.hoony.kotlinsample.memo.main.MainActivity" />
+        <activity android:name=".memo.main.MainActivity" />
         <activity android:name=".room.RoomActivity" />
         <activity android:name=".content_provider.list.ListActivity" />
         <activity android:name=".content_provider.contact.ContactActivity" />
@@ -56,11 +60,13 @@
         <activity android:name=".ui_example.view_pager_in_recycler_view.UIExample2Activity" />
         <activity android:name=".sticky_item_decoration.StickyItemDecorationActivity" />
         <activity android:name=".behavior.list.ListActivity" />
+        <activity android:name=".behavior.floating_button_example.BehaviorActivity1" />
+        <activity android:name=".behavior.nested_scroll_view_example.BehaviorActivity2" />
         <activity android:name=".behavior.scroll_example_1.BehaviorExampleActivity3" />
         <activity android:name=".behavior.scroll_example_2.BehaviorExampleActivity4" />
         <activity android:name=".behavior.scroll_example_3.BehaviorExampleActivity5" />
 
-        <receiver android:name="com.hoony.kotlinsample.memo.broadcast_receiver.AlarmTool" />
+        <receiver android:name=".memo.broadcast_receiver.AlarmTool" />
     </application>
 
 </manifest>
