--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         <activity
             android:name=".ui_example.collapsing_toolbar_layout.UIExampleActivity3"
             android:label="@string/title_activity_u_i_example3"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -67,6 +67,7 @@
         <activity android:name=".behavior.scroll_example_3.BehaviorExampleActivity5" />
         <activity android:name=".custom_view.list.ListActivity" />
         <activity android:name=".custom_view.layout_contain_view_pager_example.CustomVIewActivity2" />
+        <activity android:name=".content_provider.galley.GalleryActivity" />
 
         <receiver android:name=".memo.broadcast_receiver.AlarmTool" />
     </application>
