--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,11 @@ dependencies {
     implementation "com.google.dagger:dagger:$dagger2_version"
     kapt "com.google.dagger:dagger-compiler:$dagger2_version"
 
+    annotationProcessor "com.google.dagger:dagger-compiler:$dagger2_version"
+    implementation "com.google.dagger:dagger-android:$dagger2_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger2_version"
+    annotationProcessor "com.google.dagger:dagger-android-processor:$dagger2_version"
+
     implementation "io.reactivex:rxandroid:$rx_java_version"
     implementation "io.reactivex:rxjava:$rx_java_version"
 }
