--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,6 +71,7 @@
         <activity android:name=".content_provider.galley.GalleryActivity" />
         <activity android:name=".custom_view.view_pager_indicator.ViewPagerIndicatorActivity" />
         <activity android:name=".dagger.coffee.CoffeeActivity" />
+        <activity android:name=".toast.ToastActivity" />
 
         <receiver android:name=".memo.broadcast_receiver.AlarmTool" />
     </application>
