--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,6 +72,7 @@
         <activity android:name=".custom_view.view_pager_indicator.ViewPagerIndicatorActivity" />
         <activity android:name=".dagger.coffee.CoffeeActivity" />
         <activity android:name=".toast.ToastActivity" />
+        <activity android:name=".animation.AnimationActivity" />
 
         <receiver android:name=".memo.broadcast_receiver.AlarmTool" />
     </application>
