kakao sdk version changed

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,5 +79,5 @@ dependencies {
     implementation "io.reactivex:rxandroid:$rx_java_version"
     implementation "io.reactivex:rxjava:$rx_java_version"
 
-    implementation "com.kakao.sdk:v2-talk"
+    implementation "com.kakao.sdk:v2-talk:2.1.0"
 }
