--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ allprojects {
         maven {
             url 'https://navercorp.bintray.com/maps/'
         }
+        maven {
+            url 'https://devrepo.kakao.com/nexus/content/groups/public/'
+        }
     }
 }
 
