--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,8 +47,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
 
-//    implementation 'com.takisoft.datetimepicker:datetimepicker:1.0.0'
-    implementation 'com.naver.maps:map-sdk:3.7.0'
+////    implementation 'com.takisoft.datetimepicker:datetimepicker:1.0.0'
+//    implementation 'com.naver.maps:map-sdk:3.7.0'
 
     implementation 'androidx.room:room-runtime:2.2.5'
     kapt 'androidx.room:room-compiler:2.2.5'
