--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven {
-            url 'https://navercorp.bintray.com/maps/'
-        }
+//        maven {
+//            url 'https://navercorp.bintray.com/maps/'
+//        }
         maven {
             url 'https://devrepo.kakao.com/nexus/content/groups/public/'
         }
